# lsm6ds33-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  shell.nix
src/: accelerometer.rs  device.rs  gyroscope.rs  lib.rs  register.rs
