[package]
name = "lsm6ds33"
version = "0.1.0"
authors = ["Patrick O'Doherty <p@trickod.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
panic-rtt-core = { version = "0.2.1", optional = true }

[features]
rttdebug = ["panic-rtt-core"]
